--- a/res/layout/article_send.xml
+++ b/res/layout/article_send.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="left"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -28,22 +28,14 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:id="@+id/time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:paddingRight="5dp"
-                    android:text="TextView"
-                    android:textColor="@color/Banana_Gray_dark"
-                    android:textSize="10sp" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="right" >
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="right"
                     android:gravity="right"
                     android:text="TextView"
                     android:textColor="@color/Black"
@@ -74,5 +66,16 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:gravity="right"
+        android:paddingRight="75dp"
+        android:text="TextView"
+        android:textColor="@color/Banana_Gray_dark"
+        android:textSize="10sp" />
 
 </LinearLayout>
