--- a/res/layout/article_reveive2.xml
+++ b/res/layout/article_reveive2.xml
@@ -46,15 +46,17 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:text="TextView"
-                    android:textColor="@color/Black"
-                    android:textStyle="bold" />
+                    android:textColor="@color/Banana_Setting_Gray" />
+
             </LinearLayout>
 
             <TextView
                 android:id="@+id/content1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left" />
+                android:layout_gravity="left"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
 
